--- a/ui/TableroVisual.ui
+++ b/ui/TableroVisual.ui
@@ -13,6 +13,32 @@
   <property name="windowTitle">
    <string>TtikiTitans</string>
   </property>
+  <widget class="QPushButton" name="pruebaPushButton">
+   <property name="geometry">
+    <rect>
+     <x>70</x>
+     <y>70</y>
+     <width>90</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>prueba</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="pruebaLabel">
+   <property name="geometry">
+    <rect>
+     <x>220</x>
+     <y>70</y>
+     <width>71</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>TextLabel</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
